# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # # Committer: Aashutosh Kayastha <aashutoshkayastha@Aashutoshs-MacBook-Air.local> # # On branch main # Your branch is up to date with 'origin/main'. # # Changes to be committed: #	new file:   images/me.jpg #	modified:   index.html #	new file:   me.jpg #

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 
 
     <!-- introduction -->
-    <section class="container-fluid introduction">
-      <div class="container text-left">
+    <section class="container-fluid introduction h-100">
+      <div class="text-left">
         <div class="row align-items-center" aria-label="Introduction to myself">
-          <div class="col-md-6 col-sm-12">
+          <div class="col-12 col-md-6 col-sm-12">
             <p class="h1">Hello,</p>
             <p class="h1"><span>I am <span class="custom-name">Aashutosh Kayastha</span> a
                 Frontend
@@ -112,7 +112,7 @@
             <a href="mailto:nep.aasu@gmail.com" role="button" aria-label="hit enter to hire me."
               class="btn custom-btn-color btn-warning custom-btn-color small bold">Hire Me!</a>
           </div>
-          <div class="col-md-6 col-sm-12 d-flex justify-content-end" role="img"
+          <div class="col-12 col-md-6 col-sm-12 d-flex justify-content-end" role="img"
             aria-label="A potrait picture of myself">
             <img src="/images/asu.png" class="img-fluid" id="potrait" alt="A potrait picture of myself">
 
@@ -126,22 +126,22 @@
   <main role="main">
     <!-- About me -->
     <section class="container-fluid" id="about-me">
-      <div class="container">
+      <div>
         <div class="row text-start p-2">
           <p class="h5 text-uppercase custom-text-color">ABOUT ME</p>
           <p class="h2" role="heading" aria-level="2">A Little About Me and My Passion</p>
         </div>
       </div>
-      <div class="container text-left ">
+      <div class="text-left ">
         <div class="row align-items-center">
-          <div class="col-md-6 col-sm-12 d-flex justify-left p-2 mb-1 reveal fade-left " id="custom" role="img"
+          <div class="col-12 col-md-6 col-sm-12 d-flex justify-left p-2 mb-1 reveal fade-left" id="custom" role="img"
             aria-label="A potrait picture of myself">
 
-            <img src="/images/me.png" class="img-fluid rounded-4 px-lg-4 " loading="lazy" alt="">
+            <img src="/images/me.jpg" class="img-fluid rounded-4 px-lg-4" loading="lazy" alt="">
           </div>
 
 
-          <div class="col-md-6 col-sm-12 reveal fade-right">
+          <div class="col-12 col-md-6 col-sm-12 reveal fade-right">
             <p class="h5">About me</p>
             <p class="text-muted small">I'm proficient in a variety of web technologies, including HTML, CSS,
               JavaScript,
@@ -165,11 +165,11 @@
     </section>
     <!-- my services -->
     <section class="container-fluid reveal fade-bottom" id="work">
-      <div class="container ">
+      <div class="container-md">
         <p class="h5 text-uppercase custom-text-color">Services</p>
         <p class="h2">Various type of tech and Digital Services</p>
       </div>
-      <div class="container mt-5 mt-md-3 mt-sm-2 services justify-content-center ">
+      <div class="container-md mt-5 mt-md-3 mt-sm-2 services justify-content-center ">
         <div class="card-deck custom-deck gap-lg-4 gap-md-4 gap-3  justify-content-start d-inline-flex flex-wrap">
           <div class="card custom-card1">
             <div class="card-body">
@@ -232,12 +232,12 @@
     </section>
     <!-- My works -->
     <section class="container-fluid">
-      <div class="container">
+      <div class="container-md">
         <p class="h5 text-uppercase custom-text-color">My works</p>
         <p class="h2">Check out my latest works</p>
       </div>
       <div class="container-fluid mt-3 p-0 ">
-        <div class="container custom-control carousel slide" id="carouselExampleIndicators" data-bs-ride="carousel">
+        <div class="container-md custom-control carousel slide" id="carouselExampleIndicators" data-bs-ride="carousel">
           <!-- <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -260,11 +260,12 @@
             <div class="carousel-item active">
               <div class="cards-wrapper  justify-content-center gap-lg-3 ">
                 <div class="card" id="custom-card">
-                  <img src="/images/services/portfolio.jpg" class="card-img-top" alt="responsive portfolio design" aria-label="responsive portfolio design">
+                  <img src="/images/services/portfolio.jpg" class="card-img-top" alt="responsive portfolio design"
+                    aria-label="responsive portfolio design">
                   <div class="card-body">
                     <h5 class="card-title">Portfolio Design</h5>
 
-                    <a href="index.html" class="btn custom-btn-color btn-warning custom-btn-color small" >View Design
+                    <a href="index.html" class="btn custom-btn-color btn-warning custom-btn-color small">View Design
                     </a>
                   </div>
                 </div>
@@ -355,7 +356,7 @@
 
     <!-- news and blog -->
     <section class="container-fluid" id="blog">
-      <div class="container">
+      <div class="container-md">
         <p class="h5 text-uppercase custom-text-color">News & Blogs</p>
         <p class="h2">Take a tour to my latest news and blogs</p>
       </div>
@@ -496,7 +497,7 @@
     </section>
   </main>
   <!-- footer -->
-  <footer class="text-center text-lg-start bg-light text-muted" id="contact">
+  <footer class=" text-lg-start bg-light text-muted" id="contact">
     <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
@@ -536,7 +537,7 @@
 
     <!-- Section: Links  -->
     <section class="">
-      <div class="container text-center text-md-start mt-5">
+      <div class="container-md text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3">
           <!-- Grid column -->
@@ -551,11 +552,8 @@
             </p>
           </div>
           <!-- Grid column -->
-
-
-
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 custom-footer mx-auto mb-4">
+          <div class="col-6 col-md-3 col-lg-2 col-xl-2 custom-footer mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
               Useful links
@@ -570,7 +568,7 @@
           <!-- Grid column -->
 
           <!-- Grid column -->
-          <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4 custom-contact">
+          <div class="col-6 col-md-4 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4 custom-contact">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4 ">Contact</h6>
             <p> <i class="fas fa-home me-3"></i> <a href="https://goo.gl/maps/ZAf99bRefW7QE8zp8"
