Update blog pages with new content

--- a/blogs/myself.html
+++ b/blogs/myself.html
@@ -120,31 +120,32 @@
       </div>
       <div class="aside col-12 col-md-3" role="aside">
         <h5 class="heading mb-3">Other Articles you might Enjoy</h5>
-        <div class="d-flex flex-wrap gap-3 d-md-grid gap-md-1 ">
-          <div class="card mb-3" style="max-width: 200px; ">
-            <div class=" row g-0">
-              <div class="col-md-4">
-                <img src="/images/blog/working.jpg" class="img-fluid rounded-start" style="height: 100%;" alt="...">
+        <div class="row mx-2">
+          <div class="card col-12 mb-3" style="max-height: 150px;">
+            <div class=" row">
+              <div class="col-4 px-0">
+                <img src="/images/blog/working.jpg" class="img-fluid  rounded-start"
+                  style=" max-height: 140px; height: 100%; object-fit: cover;" alt="...">
               </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title text-truncate">Joined Aspark system as intern</h5>
-                  <small class="text-body-secondary">Aashutosh</small>
+              <div class="col-8 px-0">
+                <div class="card-body ">
+                  <h4 class="card-title text-truncate">Joined Aspark system as intern.</h4>
+                  <p><small class="text-body-secondary">Aashutosh</small></p>
                   <a href="/blogs/blogs.html" class="stretched-link"></a>
-
                 </div>
               </div>
             </div>
           </div>
-          <div class="card mb-3" style="max-width: 200px;">
-            <div class=" row g-0">
-              <div class="col-md-4">
-                <img src="/images/blog/networks.png" class="img-fluid rounded-start" style="height: 100%;" alt="...">
+          <div class="card col-12 mb-3" style="max-height: 150px;">
+            <div class=" row">
+              <div class="col-4 px-0">
+                <img src="/images/blog/networks.png" class="img-fluid rounded-start"
+                  style=" max-height: 140px; height: 100%; object-fit: cover;" alt="...">
               </div>
-              <div class="col-md-8">
+              <div class="col-8 px-0">
                 <div class="card-body">
-                  <h5 class="card-title text-truncate">Importance of Networking in Today's Job Market</h5>
-                  <small class="text-body-secondary">Aashutosh</small>
+                  <h4 class="card-title text-truncate">Importance of Networking in Today's Job Market.</h4>
+                  <p><small class="text-body-secondary">Aashutosh</small></p>
                   <a href="/blogs/blog2.html" class="stretched-link"></a>
                 </div>
               </div>
