--- a/index.html
+++ b/index.html
@@ -70,15 +70,16 @@
         <div class="navbar-text d-none d-lg-block ">
           <a href="https://www.facebook.com/aashutosh.kayastha/" aria-label="Aashutosh on Facebook"
             class="me-4 text-reset">
-            <i class="fa-brands fa-square-facebook custom-icon"></i>
+            <i class="fa-brands fa-facebook-f custom-icon border-0"></i>
+            <!-- <i class="fa-brands fa-square-facebook custom-icon"></i> -->
           </a>
           <a href="https://twitter.com/aasu_D_ace" class="me-4 text-reset" aria-label="Aashutosh on Twitter "
             target="_blank">
             <i class="fab fa-twitter fa-md custom-icon"></i>
           </a>
           <a href="mailto:nep.aasu@gmail.com" class="me-4 text-reset" aria-label="Aashutosh on Gmail " target="_blank">
-            <!-- <i class="fab fa-google fa-md custom-icon"></i> -->
-            <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt="">
+            <i class="fab fa-google fa-md custom-icon"></i>
+            <!-- <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt=""> -->
           </a>
           <a href="https://www.instagram.com/asu_d_ace/" target="_blank" aria-label="Aashutosh on Instagram "
             class="me-4 text-reset">
@@ -524,15 +525,15 @@
         <div class="custom-icon-a">
           <a href="https://www.facebook.com/aashutosh.kayastha/" target="_blank" class="me-4 text-reset"
             aria-label="Aashutosh Facebook Link">
-            <i class="fa-brands fa-square-facebook custom-icon "></i>
+            <i class="fa-brands fa-facebook-f custom-icon "></i>
           </a>
           <a href="https://twitter.com/aasu_D_ace" class="me-4 text-reset" target="_blank"
             aria-label="Aashutosh Twitter Link">
             <i class="fab fa-twitter  custom-icon"></i>
           </a>
           <a href="mailto:nep.aasu@gmail.com" class="me-4 text-reset" target="_blank" aria-label="Aashutosh Gmail Link">
-            <!-- <i class="fab fa-google custom-icon"></i> -->
-            <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt="">
+            <i class="fab fa-google custom-icon"></i>
+            <!-- <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt=""> -->
           </a>
           <a href="https://www.instagram.com/asu_d_ace/" target="_blank" class="me-4 text-reset"
             aria-label="Aashutosh instagram Link">
