--- a/blogs/myself.html
+++ b/blogs/myself.html
@@ -67,8 +67,8 @@
             <i class="fab fa-twitter fa-md custom-icon"></i>
           </a>
           <a href="mailto:nep.aasu@gmail.com" class="me-4 text-reset" aria-label="Aashutosh on Gmail " target="_blank">
-            <!-- <i class="fab fa-google fa-md custom-icon"></i> -->
-            <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt="">
+            <i class="fab fa-google fa-md custom-icon"></i>
+            <!-- <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt=""> -->
           </a>
           <a href="https://www.instagram.com/asu_d_ace/" target="_blank" aria-label="Aashutosh on Instagram "
             class="me-4 text-reset">
@@ -178,7 +178,8 @@
             <i class="fab fa-twitter custom-icon"></i>
           </a>
           <a href="mailto:nep.aasu@gmail.com" class="me-4 text-reset" target="_blank" aria-label="Aashutosh Gmail Link">
-            <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt="">
+            <i class="fab fa-google fa-md custom-icon"></i>
+            <!-- <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt=""> -->
           </a>
           <a href="https://www.instagram.com/asu_d_ace/" target="_blank" class="me-4 text-reset"
             aria-label="Aashutosh instagram Link">
