--- a/services/service.html
+++ b/services/service.html
@@ -77,8 +77,8 @@
             <i class="fab fa-twitter fa-md custom-icon"></i>
           </a>
           <a href="mailto:nep.aasu@gmail.com" class="me-4 text-reset" aria-label="Aashutosh on Gmail " target="_blank">
-            <!-- <i class="fab fa-google fa-md custom-icon"></i> -->
-            <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt="">
+            <i class="fab fa-google fa-md custom-icon"></i>
+            <!-- <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt=""> -->
           </a>
           <a href="https://www.instagram.com/asu_d_ace/" target="_blank" aria-label="Aashutosh on Instagram "
             class="me-4 text-reset">
@@ -108,7 +108,7 @@
   <main class="">
     <div class="ban">
       <section class="pb-5 banner ">
-        <div class="container container-fluid">
+        <div class="container ">
           <div class="row align-items-center" aria-label="Introduction to myself">
             <div class="col-12 col-md-6 col-sm-6">
               <h1> Front-End Development Services</h1>
@@ -1546,7 +1546,8 @@
             <i class="fab fa-twitter custom-icon"></i>
           </a>
           <a href="mailto:nep.aasu@gmail.com" class="me-4 text-reset" target="_blank" aria-label="Aashutosh Gmail Link">
-            <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt="">
+            <i class="fab fa-google fa-md custom-icon"></i>
+            <!-- <img src="/images/Googlesvg.png" class="custom-icon pb-1" width="16" alt=""> -->
           </a>
           <a href="https://www.instagram.com/asu_d_ace/" target="_blank" class="me-4 text-reset"
             aria-label="Aashutosh instagram Link">
