--- a/index.html
+++ b/index.html
@@ -309,19 +309,20 @@
                   </div>
                 </div>
                 <div class="card d-none d-md-block" id="custom-card">
-                  <img src="/images/works/e.png" class="card-img-top" alt="...">
+                  <img src="/images/works/weather.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h6 class="card-title fs-5">Card title</h6>
+                    <h6 class="card-title fs-5">Weather App</h6>
 
-                    <a href="#" class="btn custom-btn-color btn-warning custom-btn-color small btn-sm">View Design</a>
+                    <a href="https://6493dc09d8a3b6238bdf72de--jolly-florentine-554cfa.netlify.app/"
+                      class="btn custom-btn-color btn-warning custom-btn-color small btn-sm">View Design</a>
                   </div>
                 </div>
                 <div class="card d-none d-md-block" id="custom-card">
-                  <img src="/images/works/f.png" class="card-img-top" alt="...">
+                  <img src="/images/works/contact-manager.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h6 class="card-title fs-5">Card title</h6>
+                    <h6 class="card-title fs-5">Contact-manager</h6>
 
-                    <a href="#"
+                    <a href="https://glistening-pony-4a881e.netlify.app/"
                       class="btn custom-btn-color btn-warning custom-btn-color small stretched-link btn-sm">View
                       Design</a>
                   </div>
@@ -331,11 +332,12 @@
             <div class="carousel-item">
               <div class="cards-wrapper  justify-content-center gap-lg-3 ">
                 <div class="card" id="custom-card">
-                  <img src="/images/works/c.png" class="card-img-top" alt="...">
+                  <img src="/images/works/jokes.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h6 class="card-title fs-5">Card title</h6>
+                    <h6 class="card-title fs-5">Jokes Generator</h6>
 
-                    <a href="#" class="btn custom-btn-color btn-warning small stretched-link btn-sm">View Design</a>
+                    <a href="https://gleaming-basbousa-40f0d5.netlify.app/"
+                      class="btn custom-btn-color btn-warning small stretched-link btn-sm">View Design</a>
                   </div>
                 </div>
                 <div class="card d-none d-md-block" id="custom-card">
