Your commit message here

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               please
               don't hesitate to get
               in touch if you have any questions or opportunities for collaboration!</p>
-            <a href="/file/cv.pdf" download role="button" class="btn btn-primary custom-btn small">Download
+            <a href="/file/CV.pdf" download role="button" class="btn btn-primary custom-btn small">Download
               CV</a>
           </div>
         </div>
